@@ -1,6 +1,9 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Documentation]
+  - Added a note about using with Moose.
+
   [Tests]
   - Added tests with Moose.
 
